<resources>
    <string name="app_name">课间</string>
    <string name="course_add">新增课程</string>
    <string name="course_tab_tag">课程</string>
    <string name="message_tab_tag">消息</string>
    <string name="campus_tab_tag">校内</string>
    <string name="post">帖子</string>
    <string name="search_hint">search_hint</string>
    <string name="course_add_title">创建课程</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_tab_course">课程</string>
    <string name="navigation_tab_message">消息</string>
    <string name="navigation_tab_campus">校内</string>
    <string name="my_course_title">我的课程</string>
    <string name="all_course_title">全部课程</string>
    <string name="course_title">课程</string>
    <string name="message_title">我的消息</string>
    <string name="campus_title">校内动态</string>
    <string name="main_course_my_course">我的课程</string>
    <string name="main_course_all_course">全部课程</string>
    <string name="main_course_academy_type_title">院系</string>
    <string name="main_course_type_title">性质</string>
    <string name="main_course_select_all_academy">所有院系</string>
    <string name="main_course_select_all_course">所有课程</string>
    <string name="enter_course_text">进入课程</string>
    <string name="main_course_no_more_course">&#62;_&#60;没有更多课程了</string>
    <string name="main_course_no_my_course">你还没有加入任何课程哦</string>
    <string name="main_course_no_all_course">你们学校还没有在@string/app_name app上添加课程哦，赶快鼓动他们吧!</string>
    <string name="main_course_brief_academy_prefix">开课院系:</string>
    <string name="main_course_teachers">授课教师:</string>
    <string name="course_teach_teacher_title">授课教师:</string>
    <string name="annoucement_title">公告</string>
    <string name="annoucement_no_annoucement">目前还没有发过公告~</string>
    <string name="annoucement_action_name">发表于</string>
    <string name="comments_area_button_text">讨论区</string>
    <string name="course_question_area_button_text">课堂问题</string>
    <string name="course_menu_publish_annouc">发布公告</string>
    <string name="course_menu_publish_post">发帖子</string>
    <string name="course_menu_question">课堂提问</string>
    <string name="course_menu_naming">点名</string>
    <string name="course_menu_sign_in">签到</string>
    <string name="post_action_name">发表于</string>
    <string name="answer_question_text">我要答题</string>
    <string name="question_finish_text">问题已结束</string>
    <string name="shut_down_question_text">关闭答题</string>
    <string name="shut_down_question_on_progress">正在关闭问题...</string>
    <string name="close_question_error_message">网络出了点小问题，没能关闭问题，请稍后再试</string>
    <string name="show_question_stats">查看答案统计</string>
    <string name="history_question_list_title">往期问题</string>
    <string name="answer_question_on_progress">正在提交答案...</string>
    <string name="answer_question_success_message">提交答案成功!</string>
    <string name="answer_question_time_out">问题已经关闭了~~</string>
    <string name="title_activity_question_answer">问题回答</string>
    <string name="title_activity_question_stats">答题统计</string>
    <string name="course_detail_activity">课程页面</string>
    <string name="course_intro_activity">课程详情</string>
    <string name="course_create_activity">创建课程</string>
    <string name="annouc_publish_activity">发布公告</string>
    <string name="question_publish_activity">发布题目</string>
    <string name="course_notice">课程公告</string>
    <string name="annouc_list_activity">课程公告</string>
    <string name="course_naming_activity">课程点名</string>
    <string name="course_sign_in_activity">课程签到</string>
    <string name="new_reply">新的回复</string>
    <string name="new_praise">收到的赞</string>
    <string name="mention_me">邀请我的</string>
    <string name="my_message">我的消息</string>
    <string name="course_intro_student_num_postfix">人在学</string>
    <string name="course_intro_teacher_title">授课教师</string>
    <string name="course_intro_assistant_title">助教</string>
    <string name="course_intro_add_assistant">添加</string>
    <string name="course_intro_brief_tab_title">课程概述</string>
    <string name="course_intro_teach_content_tab_title">教学内容</string>
    <string name="course_intro_reference_tab_title">参考资料</string>
    <string name="annoucement_publish_title_head">标题</string>
    <string name="annoucement_publish_content_head">内容</string>
    <string name="annoucement_publish_commit">发布</string>
    <string name="annoucement_publish_no_title_message">请填写公告的标题</string>
    <string name="annoucement_publish_no_content_message">请填写公告的内容</string>
    <string name="annoucement_publish_success_message">新公告发布成功！</string>
    <string name="course_create_name_title">课程名称</string>
    <string name="course_create_intro_title">课程简介</string>
    <string name="course_create_content_title">教学内容</string>
    <string name="course_create_teacher_title">授课教师</string>
    <string name="course_create_assistant_title">助教</string>
    <string name="course_create_add_teacher_action">添加</string>
    <string name="course_create_add_assistant_action">添加</string>
    <string name="course_create_commit_text">创建课程</string>
    <string name="course_create_success_message">新课程添加成功！</string>
    <string name="course_create_no_name_message">请填写课程名称</string>
    <string name="course_create_no_intro_message">请填写课程简介</string>
    <string name="course_create_no_content_message">请填写课程内容</string>
    <string name="course_create_no_teacher_message">请添加授课教师</string>
    <string name="question_answer_stats_title_text">结果统计</string>
    <string name="question_answer_stats_join_num_title">参与答题人数</string>
    <string name="question_answer_stats_correct_rate_title">答题正确率</string>
    <string name="question_answer_stats_distribute_title">各项答题人数</string>
    <string name="question_answer_all_answer_title_text">全部答案</string>
    <string name="question_answer_no_question_answer">此问题还没有人回答哦</string>
    <string name="question_answer_all_answer_no_more_question">没有更多问题了</string>
    <string name="question_publish_time_limit">时限</string>
    <string name="question_publish_type_title">类型</string>
    <string name="question_publish_content_title">题目</string>
    <string name="question_publish_choice_title">选项</string>
    <string name="question_publish_choice_num_title">请设置选项个数</string>
    <string name="question_publish_application_answer_title">答案</string>
    <string name="question_publish_content_hint">请在此输入题干</string>
    <string name="question_publish_choice_hint">请在此输入选项内容</string>
    <string name="question_publish_correct_answer">正确答案</string>
    <string name="question_publish_confined">确认发布</string>
    <string name="question_publish_invalid_time_limit_alert_message">请在输入一个时限（整数）
        </string>
    <string name="question_publish_no_choice">请选择一个正确答案</string>
    <string name="question_publish_success_message">已成功提问！</string>
    <string name="internal_logic_error_message">系统错误，请稍后再试</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ssdfsdsddssd">ssdfsdsddssd</string>
    <string name="user_info">用户信息</string>
    <string name="course_naming_type_qiandao">签到时间:</string>
    <string name="course_naming_not_start">未开始</string>
    <string name="course_naming_not_start_clock_text">- -:- -</string>
    <string name="course_naming_naming_action">我要点名</string>
    <string name="course_naming_on_naming">正在点名</string>
    <string name="course_naming_begin_naming">开始点名</string>
    <string name="course_naming_finish">点名结束</string>
    <string name="course_naming_history_title">往期点名</string>
    <string name="course_naming_sign_in_stats_title">出勤统计</string>
    <string name="course_naming_sign_in_num_title">签到人数</string>
    <string name="course_naming_absent_list_title">未到名单</string>
    <string name="on_getting_naming_result">正在获取点名结果</string>
    <string name="on_send_naming_request">正在发送点名请求</string>
    <string name="course_sign_in_time_title">签到时间:</string>
    <string name="course_sign_in_teacher_title">上课教师:</string>
    <string name="course_sign_in_sign_in_action">我要签到</string>
    <string name="course_sign_in_no_current_naming_text">&#62;_&#60;现在没有点名哦</string>
    <string name="course_sign_in_already_sign_in">已签到</string>
    <string name="course_sign_in_not_sign_in_status">未签到</string>
    <string name="course_sign_in_success">签到成功！</string>
    <string name="course_sign_in_miss">错过了</string>
    <string name="course_sign_in_already_miss">已错过</string>
    <string name="course_sign_in_history_title">签到历史</string>
    <string name="campus_main_latest">最新</string>
    <string name="campus_main_hottest">热门</string>
    <string name="campus_publish_title">标题</string>
    <string name="campus_publish_content">内容</string>
    <string name="campus_publish_invite">邀请: </string>
    <string name="campus_publish_invite_answer">邀请回答</string>
    <string name="campus_publish_publish">发表帖子</string>
    <string name="zhankai">展开</string>
    <string name="shouqi">收起</string>
    <string name="add">添加</string>
    <string name="minute">分钟</string>
    <string name="single_choice_question">单选题</string>
    <string name="multi_choice_question">多选题</string>
    <string name="other">其他</string>
    <string name="char_A">A</string>
    <string name="char_B">B</string>
    <string name="char_C">C</string>
    <string name="char_D">D</string>
    <string name="num_four">4</string>
    <string name="on_process">正在处理中，请稍等片刻</string>
    <string name="pull_to_refresh_tap_label">刷新成功!</string>
    <string name="pull_to_refresh_release_label">释放以刷新</string>
    <string name="pull_to_refresh_pull_label">正在刷新...</string>
    <string name="pull_to_refresh_refreshing_label">这个是什么?</string>
    <string name="annouc_on_top">[置顶]</string>
    <string name="net_disconnet">网络出了点小故障..</string>
    <string-array name="brands">
        <item>中国</item>

    </string-array>
    <string name="why_bind_school_account"> <u>为什么要绑定教务网帐号</u></string>
    <string name="skip_bind"> <u>跳过此步骤，暂不绑定</u></string>
    <string name="user_login">登录</string>
    <string name="user_forget_password">忘记密码</string>
    <string name="user_regist">注册</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_search_test">SearchTestActivity</string>
    <string name="title_activity_search_view_demo">SearchViewDemo</string>
    <string name="title_activity_search_people">SearchPeopleActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_nomore">暂无更多</string>
    <string name="attention_course">他关注的课程</string>
</resources>