<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kejian.mike.mike_kejian_android.ui.course.CourseListContainerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <RadioButton
                android:id="@+id/main_course_my_course_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/main_course_my_course"
                android:gravity="center"
                android:textSize="@dimen/medium_font"
                android:paddingTop="@dimen/big_padding"
                android:paddingBottom="@dimen/big_padding" />

            <RadioButton
                android:id="@+id/main_course_all_course_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/main_course_all_course"
                android:gravity="center"
                android:textSize="@dimen/medium_font"
                android:paddingTop="@dimen/big_padding"
                android:paddingBottom="@dimen/big_padding"/>

        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_course_all_course_select_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/big_padding"
                android:paddingRight="@dimen/big_padding"
                android:textSize="@dimen/sub_medium_font"
                android:text="@string/main_course_academy_type_title"/>

            <LinearLayout
                android:id="@+id/course_select_academy_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_course_academy_select_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sub_medium_font"
                    android:textColor="@color/green"
                    android:text="@string/main_course_select_all_academy"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/down"/>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/big_padding"
                android:paddingRight="@dimen/big_padding"
                android:textSize="@dimen/sub_medium_font"
                android:text="@string/main_course_type_title"/>

            <LinearLayout
                android:id="@+id/course_select_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_course_course_type_select_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sub_medium_font"
                    android:textColor="@color/green"
                    android:text="@string/main_course_select_all_course"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/down"/>
                </RelativeLayout>

            </LinearLayout>

            </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_course_course_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom">
    </FrameLayout>

</LinearLayout>