<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/big_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/big_padding"
    style="@style/submenuStyle">

    <LinearLayout
        android:id="@+id/course_submenu_teacher_publish_annouc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/medium_padding"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/notification_green"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/big_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_font"
            android:text="@string/course_menu_publish_annouc"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/course_submenu_teacher_publish_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/medium_padding"
        android:paddingBottom="@dimen/medium_padding"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/comment3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/big_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_font"
            android:text="@string/course_menu_publish_post"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/course_submenu_teacher_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/medium_padding"
        android:paddingBottom="@dimen/medium_padding"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/question"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/big_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_font"
            android:text="@string/course_menu_question"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/course_submenu_teacher_naming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/medium_padding"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/check_green"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/big_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_font"
            android:text="@string/course_menu_naming"/>
    </LinearLayout>

</LinearLayout>